--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,19 @@
 .App {
+  background-image: linear-gradient(to left,#eba4dd,#8ee8a3,#6fdae8);
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  height: 100vh;
+  width: 100%;
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
 }
 
-.App-link {
-  color: #61dafb;
-}
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+@media screen and (max-width:768px) {
+  .App{
+    height: 100vh;
+    width: 100%;
   }
-  to {
-    transform: rotate(360deg);
-  }
+  
 }
